# SkillboxCPlusPlus

100 m run simulator/: CMakeLists.txt  README.md  main.cpp
100 m run simulator/include/: Simulation.h  Swimmer.h
100 m run simulator/src/: Simulation.cpp  Swimmer.cpp
Blur/: Blur.ui  CMakeLists.txt
Blur/include/: mainwindow.h
Blur/src/: main.cpp  mainwindow.cpp
HTML redactor/: CMakeLists.txt  Makefile  README.md  build.bat  run.bat
HTML redactor/include/: HTMLEditor.h
HTML redactor/src/: HTMLEditor.cpp  main.cpp
Moving a circle/: CMakeLists.txt  copy_qt_files.ps1  main.qml  qt.conf
Moving a circle/include/: main.h
Moving a circle/src/: main.cpp
Phone Checker/: CMakeLists.txt  README.md  main.cpp
Phone Checker/include/: PhoneChecker.h
Phone Checker/src/: PhoneChecker.cpp
RedButton/: CMakeLists.txt  README.md
RedButton/include/: MainWindow.h
RedButton/src/: MainWindow.cpp  main.cpp
arg reqests/: CMakeLists.txt
arg reqests/include/: http_request.h
arg reqests/src/: http_request.cpp  main.cpp
data analyse/: CMakeLists.txt  README.md  main.cpp
data analyse/include/: movie_json.h
data analyse/src/: movie_json.cpp
data register/: CMakeLists.txt  README.md
data register/include/: entry.h  registry.h
data register/src/: main.cpp
film info/: CMakeLists.txt  README.md  main.cpp
film info/include/: movie_json.h
film info/src/: movie_json.cpp
fishing simulator/include/: Exceptions.h  Game.h
fishing simulator/src/: Game.cpp
graphical calc QT Creator/Player/: CMakeLists.txt  Main.qml  main.cpp
graphocal calc/: CMakeLists.txt  README.md
graphocal calc/include/: calc.h
graphocal calc/src/: calc.cpp  calc.ui  main.cpp
headline capture/: CMakeLists.txt  README.md
headline capture/include/: html_parser.h
headline capture/src/: html_parser.cpp  main.cpp
kitchen/: CMakeLists.txt  README.md
kitchen/include/: Kitchen.h  Order.h  Restaurant.h  Utils.h
kitchen/src/: Kitchen.cpp  Restaurant.cpp  Utils.cpp  main.cpp
mid arif in massive/: CMakeLists.txt  README.md
mid arif in massive/include/: array_utils.h
mid arif in massive/src/: array_utils.cpp  main.cpp
pointer realisation/: CMakeLists.txt
pointer realisation/include/: shared_ptr_toy.h  toy.h
pointer realisation/src/: main.cpp  shared_ptr_toy.cpp  toy.cpp
railway station/: CMakeLists.txt  README.md  main.cpp
railway station/include/: station.h  train.h
railway station/src/: station.cpp  train.cpp
rgb button/: CMakeLists.txt  buttons.qrc  main.cpp
rgb button/include/: ColorfulCircle.h
rgb button/src/: ColorfulCircle.cpp
search_engine/: README.md  answers.json  config.json  requests.json
search_engine/include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
search_engine/resources/: file001.txt  file002.txt  file003.txt  file004.txt
search_engine/scripts/: run_search.bat
search_engine/src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  search_app.cpp
search_engine/tests/: main.cpp
shape interface/: CMakeLists.txt  README.md  main.cpp
shape interface/include/: Circle.h  Rectangle.h  Shape.h  Triangle.h
shape interface/src/: Circle.cpp  Rectangle.cpp  Shape.cpp  Triangle.cpp
shop box/: CMakeLists.txt  README.md  main.cpp
shop box/include/: Database.h  ShoppingCart.h
shop box/src/: Database.cpp  ShoppingCart.cpp
smart dog pointer/: CMakeLists.txt  README.md  main.cpp
smart dog pointer/include/: Dog.h  Toy.h
smart dog pointer/src/: Dog.cpp  Toy.cpp
superdog/: CMakeLists.txt  README.md  main.cpp
superdog/include/: Dog.h  SpecificTalents.h  Talent.h
superdog/src/: Dog.cpp  SpecificTalents.cpp
tv remote/: CMakeLists.txt
tv remote/include/: RemoteControlWidget.h
tv remote/src/: RemoteControlWidget.cpp  main.cpp
user reqests/: CMakeLists.txt  README.md  main.cpp
user reqests/include/: http_client.h
user reqests/src/: http_client.cpp
